--- a/styles/Movie.module.css
+++ b/styles/Movie.module.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	width: 220px;
-	margin: 20px;
+	margin: 50px 20px;
 }
 
 .image {
@@ -15,7 +15,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 230px;
-	margin: 10px 0px 10px 00px;
+	margin: 10px 0px;
 }
 
 .name {
